--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,81 @@
+body {
+background-color: rgb(127, 164, 215);
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
+a {
+    color: whitesmoke;
+}
+
+.container {
+    margin: 120px auto;
+    max-width: 600px;
+}
+
+header {
+    margin-bottom: 30px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 800;
+    line-height: 1.5;
+    color: rgb(10, 11, 11);
+}
+
+.form-container {
+    padding: 30px;
+    background-color: grey;
+    box-shadow: 0px 20px rgb(64, 132, 64);
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+form {
+    display: flex;
+}
+
+.hint {
+    line-height: 1.5;
+    margin-top: 10px;
+    font-size: 12px;
+}
+
+.instructions {
+    padding: 16px;
+    border: 1px solid rgb(10, 11, 11);
+    width: 80px;
+    font-size: 16px;
+    border-radius: 50px;
+    line-height: 20px;
+    color: darkred;
+}
+
+.submit-button {
+    margin-left: 10px;
+    background: rgb(64, 132, 64);
+    color: whitesmoke;
+    border: none;
+    font-size: 16px;
+    width: 150px;
+    border-radius: 50px;
+    padding: 14px 24px;
+}
+
+.poem {
+    font-size: 16px;
+    padding: 20px;
+    background-color: whitesmoke;
+    line-height: 2;
+    border-left: 3px solid rgb(64, 132, 64);
+    box-shadow: 0px 4px 30px 0px rgb(4, 45, 103);
+}
+
+
+.footer {
+    font-size: 13px;
+    text-align: center;
+    margin-top: 30px;
+
+}
