Update css font size and colors

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-background-color:rgb(184, 178, 162);
+background-color: #00bbf0;
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -26,8 +26,8 @@ h1 {
 
 .form-container {
     padding: 15px 20px;
-    background-color: grey;
-    box-shadow: 0px 20px 60px rgb(5, 93, 5);
+    background-color: #fdb44b;
+    box-shadow: 0px 20px 60px #005792;
     border-radius: 10px;
     margin-bottom: 30px;
 }
@@ -39,7 +39,7 @@ form {
 .hint {
     line-height: 1.5;
     margin-top: 10px;
-    font-size: 12px;
+    font-size: 14px;
     opacity: 0.6;
 }
 
@@ -55,7 +55,7 @@ form {
 
 .submit-button {
     margin-left: 10px;
-    background: rgb(64, 132, 64);
+    background: #00204a;
     color: whitesmoke;
     border: none;
     font-size: 16px;
@@ -69,7 +69,7 @@ form {
     padding: 20px;
     background-color: whitesmoke;
     line-height: 2;
-    border-left: 3px solid rgb(64, 132, 64);
+    border-left: 3px solid #00204a;
     box-shadow: 0px 4px 30px 0px rgb(110, 12, 12);
 }
 
